--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -24,7 +24,6 @@
 .nav-link {
     font-family: "Poppins", sans-serif;
     font-size: 16px;
-    font-weight: 400;
     line-height: 24px;
     text-align: left;
     color: #000000;
@@ -72,7 +71,6 @@
 .home {
     font-family: "Poppins", sans-serif;
     font-size: 16px;
-    font-weight: 400;
     line-height: 24px;
     text-align: left;
     color: #000;
@@ -92,7 +90,6 @@
 .sec-1-dictumst {
     font-family: "Poppins", sans-serif;
     font-size: 16px;
-    font-weight: 400;
     line-height: 24px;
     text-align: left;
     opacity: 60%;
@@ -126,7 +123,6 @@
 .quis {
     font-family: "Poppins", sans-serif;
     font-size: 12px;
-    font-weight: 400;
     line-height: 18px;
     text-align: left;
     color: #666666;
@@ -584,7 +580,7 @@
     max-width: 346px;
 }
 
-.col-3-head {
+.fotter-head {
     font-family: "Poppins", sans-serif;
     font-size: 14px;
     font-weight: 700;
@@ -594,7 +590,7 @@
     color: #ffffffff;
 }
 
-.col-3-text {
+.fotter-text {
     font-family: "Poppins", sans-serif;
     font-size: 12px;
     font-weight: 400;
@@ -606,6 +602,8 @@
     cursor: pointer;
     width: fit-content;
 }
+
+.gap12 {}
 
 .gall-ry {
     font-family: "Poppins", sans-serif;
