--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -29,6 +29,7 @@
     color: #000000;
     padding-bottom: 24px;
     padding-top: 30px;
+
 }
 
 .nav-btn {
@@ -603,7 +604,7 @@
     width: fit-content;
 }
 
-.gap12 {}
+
 
 .gall-ry {
     font-family: "Poppins", sans-serif;
@@ -741,6 +742,24 @@
 
 
 /*--------------------------------------------------------------------------Responisve--------------------------------------------------------------------------*/
+
+
+
+@media (max-width:576px) {
+    .free {
+        font-size: 27px;
+    }
+
+    .Events {
+        font-size: 27px;
+    }
+
+    .credits {
+        font-size: 10px;
+        
+    }
+}
+
 @media (max-width:576px) {
 
     .column {
@@ -767,11 +786,14 @@
     .logo1 {
         width: 70px;
     }
+
+    .gall-ry {
+        margin-top: 20px;
+    }
 }
 
 
-
-@media (max-width:994px) {
+@media (max-width:992px) {
     .display {
         flex-direction: column;
         justify-content: center;
@@ -779,9 +801,9 @@
         height: 100%;
         position: fixed;
         top: 0;
-        top: -100%;
+        right: -100%;
         background-color: black;
-        transition: all .5s ease-in-out;
+        transition: all 300ms linear;
     }
 
     input[type="checkbox"]:checked~ul.display {
@@ -796,6 +818,7 @@
         justify-content: space-between;
         flex-direction: column;
         z-index: 10;
+        position: fixed;
         right: 2%;
     }
 
@@ -808,6 +831,7 @@
 
     .nav-link {
         color: #FFFFFF;
+
     }
 
     .imges-box {
